Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,10 @@
    "outputs": [],
    "source": [
     "class KNN():\n",
-    "    def fit()"
+    "    def fit(self):\n",
+    "        pass\n",
+    "    \n",
+    "    d"
    ]
   },
   {
