--- a/index.ipynb
+++ b/index.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,8 @@
     "    def fit(self):\n",
     "        pass\n",
     "    \n",
-    "    d"
+    "    def predict(self):\n",
+    "        pass"
    ]
   },
   {
