--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
    "outputs": [],
    "source": [
     "def _get_distances(self, x):\n",
-    "    distances = np.array\n",
+    "    distances = np.array()\n",
     "\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_distances = _get_distances"
