--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,7 @@
    "source": [
     "def _get_distances(self, x):\n",
     "    distances = np.array()\n",
-    "    for i, x\n",
+    "    for i, x_train in enumerate\n",
     "\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_distances = _get_distances"
