Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
    "outputs": [],
    "source": [
     "def _get_distances(self, x):\n",
-    "    distances = np.array()\n",
+    "    distances = []\n",
     "    for i, x_train in enumerate(self.X_train):\n",
     "        \n",
     "\n",
