Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -116,7 +116,7 @@
     "def _get_distances(self, x):\n",
     "    distances = []\n",
     "    for i, x_train in enumerate(self.X_train):\n",
-    "        dist = euc(x,)\n",
+    "        dist = euc(x, x_train)\n",
     "\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_distances = _get_distances"
