Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,6 +118,7 @@
     "    for i, x_train in enumerate(self.X_train):\n",
     "        dist = euc(x, x_train)\n",
     "        distances.append((i,dist))\n",
+    "    return distances\n",
     "\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_distances = _get_distances"
