Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
     "    for i, x_train in enumerate(self.X_train):\n",
     "        dist = euc(x, x_train)\n",
     "        distances.append((i,dist))\n",
-    "    return np.arraydistances\n",
+    "    return np.array(distances)\n",
     "\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_distances = _get_distances"
