--- a/index.ipynb
+++ b/index.ipynb
@@ -176,7 +176,7 @@
    "outputs": [],
    "source": [
     "def _get_label_prediction(self, k_nearest):\n",
-    "    y_nearest = self.y_train.iloc[i] for i, z in k_near\n",
+    "    y_nearest = [self.y_train.iloc[i] for i, z in k_nearest]\n",
     "\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_label_prediction = _get_label_prediction"
