Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -177,7 +177,7 @@
    "source": [
     "def _get_label_prediction(self, k_nearest):\n",
     "    y_nearest = [self.y_train.iloc[i] for i, z in k_nearest]\n",
-    "    counts = \n",
+    "    counts = np.bincount(y_nearest)\n",
     "\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_label_prediction = _get_label_prediction"
