--- a/index.ipynb
+++ b/index.ipynb
@@ -178,6 +178,7 @@
     "def _get_label_prediction(self, k_nearest):\n",
     "    y_nearest = [self.y_train.iloc[i] for i, z in k_nearest]\n",
     "    counts = np.bincount(y_nearest)\n",
+    "    return np.argmax\n",
     "\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_label_prediction = _get_label_prediction"
