Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
    "outputs": [],
    "source": [
     "def predict(self, X_test, k=3):\n",
-    "    pass\n",
+    "    for i\n",
     "        \n",
     "KNN.predict = predict"
    ]
