Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,8 @@
    "source": [
     "def predict(self, X_test, k=3):\n",
     "    for x in X_test:\n",
-    "        ds = _get_distances()\n",
+    "        ds = _get_distances(x)\n",
+    "        \n",
     "        \n",
     "KNN.predict = predict"
    ]
