--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "def predict(self, X_test, k=3):\n",
     "    for x in X_test:\n",
     "        ds = _get_distances(x)\n",
-    "        \n",
+    "        nea\n",
     "        \n",
     "KNN.predict = predict"
    ]
