Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
     "    for x in X_test:\n",
     "        ds = _get_distances(x)\n",
     "        near = _get_k_nearest(ds, k)\n",
-    "        labels = -\n",
+    "        labels = _get_label_prediction(near)\n",
     "        \n",
     "KNN.predict = predict"
    ]
