--- a/index.ipynb
+++ b/index.ipynb
@@ -223,6 +223,7 @@
    "outputs": [],
    "source": [
     "def predict(self, X_test, k=3):\n",
+    "    preds = []\n",
     "    for x in X_test:\n",
     "        ds = _get_distances(x)\n",
     "        near = _get_k_nearest(ds, k)\n",
