Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
     "        ds = _get_distances(x)\n",
     "        near = _get_k_nearest(ds, k)\n",
     "        labels = _get_label_prediction(near)\n",
-    "        preds.append\n",
+    "        preds.append(labels)\n",
     "        \n",
     "KNN.predict = predict"
    ]
