Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -229,6 +229,7 @@
     "        near = _get_k_nearest(ds, k)\n",
     "        labels = _get_label_prediction(near)\n",
     "        preds.append(labels)\n",
+    "    return\n",
     "        \n",
     "KNN.predict = predict"
    ]
