--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
     "        near = _get_k_nearest(ds, k)\n",
     "        labels = _get_label_prediction(near)\n",
     "        preds.append(labels)\n",
-    "    return\n",
+    "    return preds\n",
     "        \n",
     "KNN.predict = predict"
    ]
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
