--- a/index.ipynb
+++ b/index.ipynb
@@ -275,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = test_train_split()"
+    "X_train, X_test, y_train, y_test = test_train_split(data, target, test_size)"
    ]
   },
   {
