--- a/index.ipynb
+++ b/index.ipynb
@@ -287,12 +287,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "knn = KNN()\n",
-    "k"
+    "knn.fit(X_train, y_train)"
    ]
   },
   {
