--- a/index.ipynb
+++ b/index.ipynb
@@ -225,9 +225,9 @@
     "def predict(self, X_test, k=3):\n",
     "    preds = []\n",
     "    for x in X_test:\n",
-    "        ds = _get_distances(x)\n",
-    "        near = _get_k_nearest(ds, k)\n",
-    "        labels = _get_label_prediction(near)\n",
+    "        ds = self._get_distances(x)\n",
+    "        near = self._get_k_nearest(ds, k)\n",
+    "        labels = self._get_label_prediction(near)\n",
     "        preds.append(labels)\n",
     "    return preds\n",
     "        \n",
