Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -176,7 +176,7 @@
    "outputs": [],
    "source": [
     "def _get_label_prediction(self, k_nearest):\n",
-    "    y_nearest = [self.y_train.iloc[i] for i, z in k_nearest]\n",
+    "    y_nearest = [self.y_train[i] for i, z in k_nearest]\n",
     "    counts = np.bincount(y_nearest)\n",
     "    return np.argmax(counts)\n",
     "\n",
