Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,11 +223,12 @@
    "source": [
     "def predict(self, X_test, k=3):\n",
     "    preds = []\n",
-    "    for x in X_test:\n",
-    "        ds = self._get_distances(x)\n",
-    "        near = self._get_k_nearest(ds, k)\n",
-    "        labels = self._get_label_prediction(near)\n",
-    "        preds.append(labels)\n",
+    "    for i in X_test:\n",
+    "        # Get distances between i and each item in X_train\n",
+    "        dists = self._get_distances(i)\n",
+    "        k_nearest = self._get_k_nearest(dists, k)\n",
+    "        predicted_label = self._get_label_prediction(k_nearest)\n",
+    "        preds.append(predicted_label)\n",
     "    return preds\n",
     "        \n",
     "KNN.predict = predict"
