Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -115,10 +115,10 @@
    "source": [
     "def _get_distances(self, x):\n",
     "    distances = []\n",
-    "    for i, x_train in enumerate(self.X_train):\n",
-    "        dist = euc(x, x_train)\n",
-    "        distances.append((i,dist))\n",
-    "    return np.array(distances)\n",
+    "    for ind, val in enumerate(self.X_train):\n",
+    "        dist_to_i = euc(x, val)\n",
+    "        distances.append((ind, dist_to_i))\n",
+    "    return distances\n",
     "\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_distances = _get_distances"
