--- a/index.ipynb
+++ b/index.ipynb
@@ -339,7 +339,7 @@
     }
    ],
    "source": [
-    "print(\"Testing Accuracy: {}\".format(accuracy_score(None, None)))\n",
+    "print(\"Testing Accuracy: {}\".format(accuracy_score(y_test, None)))\n",
     "# Expected Output: Testing Accuracy: 0.9736842105263158"
    ]
   },
